# TerminalSnake

./: .gitignore  CMakeLists.txt  CMakePresets.json  Readme.md
lib/PDCurses/wincon/: pdcurses.lib
src/: main.cpp
src/Board/: Board.cpp  Board.h
src/Drawable/: Drawable.cpp  Drawable.h
src/Drawable/Empty/: Empty.cpp  Empty.h
src/Drawable/Food/: Food.cpp  Food.h
src/Drawable/Snake/: Snake.cpp  Snake.h
src/Drawable/Snake/SnakePiece/: SnakePiece.cpp  SnakePiece.h
src/Game/: Game.cpp  Game.h
src/Score/: Scoreboard.cpp  Scoreboard.h
